--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-paginate": "^8.2.0",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
+    "react-scrollbars-custom": "^4.1.1",
     "react-toastify": "^10.0.5",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-window": "^1.8.10",
